# trader.cpp

./: .clang-format  .clang-tidy  .env.example  .gitignore  CMakeLists.txt  CMakePresets.json  CONCEPTS.md  Dockerfile  Dockerfile_build  Makefile  README.md  build.sh  conanfile.txt  fixconfig  sonar-project.properties
.githooks/: pre-commit
.github/workflows/: build.yml  clean_build_test.yml  commits.yml  cron.yml  nightly.yml  nightly_bench.yml  release.yml  reusable_build.yml
benchmarks/: CMakeLists.txt  main.cpp  order_book_benchmark.cpp
benchmarks/core/: book_side_benchmark.cpp  price_update_benchmark.cpp
binance/: fixconfig  stunnel_prod.conf  stunnel_test.conf
binance/scripts/: find_host.py  network-performance.md
docs/: DESIGN.md
hooks/: check_clang_format.sh  check_clang_tidy.sh  check_shell.sh  pre-commit
scripts/: cpu_shield_start.sh  cpu_shield_stop.sh  irqs_move.sh  irqs_restore.sh  pin_cpus.sh  pin_irqs.sh  unpin_cpus.sh  upload_to_influx.py
src/: MyApplication.cpp  MyApplication.h  README.md  main.cpp
src/binance/: Auth.cpp  Auth.h  BinanceAuth.cpp  BinanceAuth.h  BinanceFixApp.cpp  BinanceFixApp.h  BinanceInit.cpp  BinanceInit.h  Config.cpp  Config.h  FixApp.cpp  FixApp.h  IAuth.h  Init.cpp  Init.h  MessageHandlingMode.h  README.md  Worker.cpp  Worker.h  _README.md  auth.cpp  auth.h  config.cpp  config.h  fix_app.cpp  fix_app.h  iauth.h  market_message_variant.h  message_handling_mode.h  side.h  symbol.h  worker.cpp  worker.h
src/core/: BidAsk.h  Env.h  OrderBook.cpp  OrderBook.h  _README.md  bid_ask.h  env.h  order_book.cpp  order_book.h  trade.h
src/f8/: includes.h  router.h  session.cpp  session.h
src/fix8/: includes.h  router.h  session.cpp  session.h
src/quickfix/: fix_app.cpp  fix_app.h  worker.cpp  worker.h
src/ui/: BidAsk.h  FakeScreen.h  FileLogReader.h  FtxuiScreen.h  ILogReader.h  IScreen.h  LogBox.cpp  LogBox.h  MockLogReader.h  OrderBook.cpp  OrderBook.h  OrderBookBox.cpp  OrderBookBox.h  TableApp.cpp  TableApp.h  TradeBox.cpp  TradeBox.h  WalletBox.cpp  WalletBox.h  _README.md  app.cpp  app.h  file_log_reader.h  ftxui_screen.h  helpers.h  ilog_reader.h  iscreen.h  log_box.cpp  log_box.h  mock_log_reader.h  order_book_box.cpp  order_book_box.h  table_app.cpp  table_app.h  trade_box.cpp  trade_box.h  traffic_box.cpp  traffic_box.h  wallet_box.cpp  wallet_box.h
src/ui/app/: app.cpp  app.h  ftxui_screen.h  iscreen.h  ui_app.cpp  ui_app.h
src/ui/log_box/: ilog_watcher.h  log_box.cpp  log_box.h  log_file_watcher.h
src/utils/: Threading.cpp  Threading.h  crash.h  double.h  env.h  logging.h  process.h  testing.h  threading.cpp  threading.h  types.h
tests/: CMakeLists.txt  test_main.cpp
tests/binance/: Auth_test.cpp  auth_test.cpp  config_test.cpp  side_test.cpp  symbol_test.cpp
tests/binance/test_resources/: invalid_key.pem  valid_key.pem
tests/core/: OrderBook_test.cpp  order_book_test.cpp
tests/ui/: FakeScreen.h  OrderBook_test.cpp  TableApp_test.cpp  fake_screen.h  mock_log_watcher.h  table_app_test.cpp  trade_box_test.cpp  ui_app_test.cpp
tests/utils/: double_test.cpp
